--- a/src/pages/activities/index.html
+++ b/src/pages/activities/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <main>
-        <h1>Atividades Disponívies</h1>
+        <h1>Todas Atividades</h1>
         <div id="containerActivities">
         </div>
     </main>
