feat: add features to activities page
- Added modal
- Added edit activity feature
- Added remove activity feature
- Added list participants of an activity feature

--- a/src/pages/activities/index.html
+++ b/src/pages/activities/index.html
@@ -13,6 +13,12 @@
         <div id="containerActivities">
         </div>
     </main>
+    <div id="overlay">
+        <div id="modal">
+            <span id="modalExit">X</span>
+            <div id="modalContent"></div>
+        </div>
+    </div>
     <script src="index.js" type="module"></script>
 </body>
 </html>
