--- a/src/pages/login/index.html
+++ b/src/pages/login/index.html
@@ -21,6 +21,6 @@
         <button id="buttonLogin">ENTRAR</button>
         <span id="spanRegister">Registrar</span>
     </div>
-    <script src="index.js"></script>
+    <script src="index.js" type="module"></script>
 </body>
 </html>
